# book-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  console.py  docker-compose.yml  prototype.ipynb  pyproject.toml
als/: serve.py  storage.py  train.py
web-ui/: Dockerfile  docker-compose.yml  main.py
web-ui/templates/: base.html  index.html
web-ui/templates/partials/: book_carousel.html
