[project]
name = "book-recommender"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab",
    "ipykernel",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "recommenders",
    "ipywidgets>=8.1.8",
    "pyarrow>=23.0.1",
    "implicit>=0.7.2",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
]

[tool.uv]
package = false
