[project]
name = "book-recommender"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "tqdm",
    "pyarrow>=23.0.1",
    "implicit>=0.7.2",
    "boto3>=1.35",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
web-ui = ["jinja2>=3", "httpx>=0.28", "python-multipart>=0.0.20"]

[tool.uv]
package = false
dev-dependencies = [
    "jupyterlab",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "recommenders",
    "ipywidgets>=8.1.8",
]
